--- a/habit/templates/base.html
+++ b/habit/templates/base.html
@@ -1,14 +1,17 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habit Tracker</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>Home Base</title>
 </head>
 <body>
     {% block content %}
-    Hello world!
+    
     {% endblock %}
 </body>
 </html>
