--- a/habit/templates/habit/add_dailyrecord.html
+++ b/habit/templates/habit/add_dailyrecord.html
@@ -1,12 +1,11 @@
-{% extends 'base.html' %} 
-
+{% extends 'base.html' %}
 {% block content %}
 
 <header>
     <a href="{% url 'logout' %}">Logout</a>
 </header>
 
-<h1>DELETE?</h1>
+<h1>Add a Daily Record:</h1>
 
 <h3>Habits for: 
     {% for day in days %}
@@ -16,8 +15,10 @@
 
 <h2><a href="{% url 'home' %}">Back to All Habits</a></h2>
 
-<form method="POST">{% csrf_token %} 
-    <button type="submit">Delete</button>
-</form>
 
+<form method ="post" enctype="multipart/form-data"> 
+    {% csrf_token %} 
+    {{ form.as_p }}
+    <button type="submit">Save</button>
+</form>
 {% endblock %} 
