--- a/habit/templates/habit/add_habit.html
+++ b/habit/templates/habit/add_habit.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <header>
     <a href="{% url 'logout' %}">Logout</a>
 </header>
 
-<h1>Edit Habit:</h1>
+<h1>Add an Habit:</h1>
 
 <h3>Habits for: 
     {% for day in days %}
@@ -15,10 +14,11 @@
 
 <h2><a href="{% url 'home' %}">Back to All Habits</a></h2>
 
-
 <form method ="post" enctype="multipart/form-data"> 
     {% csrf_token %} 
     {{ form.as_p }}
+    <p>Hold down “Control”, or “Command” on a Mac, to select more than one.
+    </p>
     <button type="submit">Save</button>
 </form>
 {% endblock %}
