--- a/habit/templates/habit/edit_dailyrecord.html
+++ b/habit/templates/habit/edit_dailyrecord.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<header>
+    <a href="{% url 'logout' %}">Logout</a>
+</header>
+
+<h3><a href="{% url 'home' %}">Back to All Habits</a></h3>
+
 <h2>Edit Daily Record:</h2>
 
 <form method ="post" enctype="multipart/form-data"> 
