--- a/habit/templates/habit/daily_habits.html
+++ b/habit/templates/habit/daily_habits.html
@@ -16,13 +16,15 @@
 <h2><a href="{% url 'home' %}">Back to All Habits</a></h2>
 
 <hr>
+
 {% for habit in habits %}
-    <p><a href="{% url 'habit_info' pk=habitpk %}">
+    <p><a href="{% url 'habit_info' habit.pk %}">
         Habit: {{ habit.name }}
         <br>
         Goal: {{ habit.goal }} {{ habit.metric }}
     </a></p>
     <br>
-{% endfor %}
+    {% endfor %}
+<h3><a href="{% url 'add_habit' %}">Add a habit</a></h3>
 
 {% endblock %}
